overflow issued solved

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
 
 body{
     font-family:'Poppins',sans-serif;
+    overflow-x: hidden;
 }
 
 html{
